# cppinterop-feedstock

./: README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: CMakeLists.txt  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  test.cpp
recipe/patches/cppinterop/: 0005-Fix-config-for-msvc.patch  0006-Export-symbols-in-Windows-DLL.patch
