cmake_minimum_required(VERSION 3.5.1 FATAL_ERROR)
project(cmake_build_test)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
find_package(CppInterOp REQUIRED)
message(STATUS "CppInterOp library status:")
message(STATUS "    config: ${CppInterOp_CONFIG}")
message(STATUS "    dir: ${CppInterOp_DIR}")
message(STATUS "    version: ${CppInterOp_VERSION}")
message(STATUS "    compatible with clang: ${CppInterOp_CLANG_VERSION}")
message(STATUS "    libraries: ${CPPINTEROP_LIBRARIES}")
message(STATUS "    include path: ${CppInterOp_INCLUDE_DIRS}")
add_executable(cmake_build_test test.cpp)
target_link_libraries(cmake_build_test PRIVATE clangCppInterOp)
add_compile_definitions(cmake_build_test PUBLIC CONDA_PREFIX="${CONDA_PREFIX}")
